chore: Update application.properties and add ElasticProduct related classes and interfaces

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# Server Configuration
+server.port=8082
+
+# Application Configuration
 spring.application.name=ms-search
+
+# Elasticsearch Configuration
+elasticsearch.host=${ELASTICSEARCH_HOST:unir-dw-app-4784076496.us-east-1.bonsaisearch.net}
+elasticsearch.credentials.user=${ELASTICSEARCH_USER:c90jom4shi}
+elasticsearch.credentials.password= ${ELASTICSEARCH_PWD:oqlrrkc7au}
+logging.level.tracer=TRACE
