--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,13 @@ elasticsearch.host=${ELASTICSEARCH_HOST:unir-dw-app-4784076496.us-east-1.bonsais
 elasticsearch.credentials.user=${ELASTICSEARCH_USER:c90jom4shi}
 elasticsearch.credentials.password= ${ELASTICSEARCH_PWD:oqlrrkc7au}
 logging.level.tracer=TRACE
+
+
+# Eureka Configuration
+eureka.client.serviceUrl.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=ms-search
+eureka.instance.lease-renewal-interval-in-seconds=5
+eureka.instance.lease-expiration-duration-in-seconds=10
