--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Server Configuration
-server.port=8082
+server.port=${PORT:8082}
 
 # Application Configuration
 spring.application.name=ms-search
