--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ logging.level.tracer=TRACE
 eureka.client.serviceUrl.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.instance.prefer-ip-address=true
+eureka.instance.prefer-ip-address=false
 eureka.instance.hostname=ms-search
 eureka.instance.lease-renewal-interval-in-seconds=5
 eureka.instance.lease-expiration-duration-in-seconds=10
