--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ eureka.client.serviceUrl.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=false
-eureka.instance.hostname=${HOSTNAME:http://localhost:8082}
+eureka.instance.hostname=${HOSTNAME:localhost}
 eureka.instance.lease-renewal-interval-in-seconds=5
 eureka.instance.lease-expiration-duration-in-seconds=10
