chore: Update application.properties to configure Eureka instance ports

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Server Configuration
-server.port=${PORT:8082}
+server.port=8082
 
 # Application Configuration
 spring.application.name=ms-search
@@ -13,9 +13,9 @@ logging.level.tracer=TRACE
 
 # Eureka Configuration
 eureka.client.serviceUrl.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=false
 eureka.instance.hostname=${HOSTNAME:localhost}
-eureka.instance.lease-renewal-interval-in-seconds=5
-eureka.instance.lease-expiration-duration-in-seconds=10
+eureka.instance.non-secure-port-enabled=false
+eureka.instance.secure-port-enabled=true
+eureka.instance.non-secure-port=80
+eureka.instance.secure-port=443
